# pdf-fax-optimizer

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
pdf-fax-optimizer/: SKILL.md
pdf-fax-optimizer/agents/: openai.yaml
pdf-fax-optimizer/assets/: bluenoise_64.npy  greennoise_64_s4.0.npy
pdf-fax-optimizer/pdf_fax_optimizer/: __init__.py  check_deps.py  cli.py  fax_pipeline.py  optimize_pdf.py  send_fax.py
pdf-fax-optimizer/references/: config-schema.md  fax-optimization.md  sending.md
pdf-fax-optimizer/scripts/: check_deps.py  fax_pipeline.py  ocr_text.py  optimize_pdf.py  send_fax.py  to_pdf.py
pdf-optimizer/: SKILL.md
pdf-optimizer/agents/: openai.yaml
pdf-optimizer/references/: config-schema.md  fax-optimization.md
pdf-optimizer/scripts/: check_deps.py  optimize_pdf.py
tests/: conftest.py  test_cli.py  test_mixed_dpi.py  test_pipeline.py  test_report.py  test_send.py  test_smoke.py  test_to_pdf.py  util.py
